add in side drawer

--- a/ABVCatalogApp/app/src/main/res/values/colors.xml
+++ b/ABVCatalogApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--APP ONLY STYLES, NOT SHARED WITH THE WORKFLOW ENGINE-->
+    <color name="primaryColor">#FFF</color>
+    <color name="screen_background">#F9F9F9</color>
+    <color name="colorPrimaryLight">#903A89CF</color>
+    <color name="accent1">#b0000000</color>
 </resources>
